[package]
name = "curuam"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/curuam"
repository = "https://github.com/CURVoid/curuam.git"
homepage = "https://github.com/CURVoid/curuam.git"
keywords = ["curuam", "random", "Mac", "Ip", "checksum"]
description = "Crate for lot of useful functions and structs like Ipv4, Mac, random_in_range, memcpy, checksum, EthHeader, IpHeader, and etc."